--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "redux-merge-reducers": "^0.0.2",
     "redux-undo": "^1.0.0-beta9-9-7",
     "reselect": "^3.0.0",
+    "shp-write": "0.2.3",
     "shpjs": "^3.3.2",
     "tinycolor2": "^1.4.2",
     "truncate": "^2.0.0",
