--- a/gtfs.yml
+++ b/gtfs.yml
@@ -1162,6 +1162,16 @@
     helpContent: "The stop_url field contains the URL of a web page about a particular location. This should be different from the agency_url and the route_url fields."
     
   # FIXME: helpContent is lifted from https://github.com/MobilityData/gtfs-flex/blob/master/spec/reference.md
+- id: locationgroupstop
+  flex: true
+  name: location_group_stops.txt
+  fields:
+  - name: "location_group_id"
+    required: true
+    inputType: TEXT
+  - name: "stop_id"
+    required: true
+    inputType: GTFS_ID
 - id: locationgroup
   flex: true
   name: location_groups.txt
@@ -1178,3 +1188,11 @@
     inputType: TEXT
     columnWidth: 12
     helpContent: "Name of the location group. Must be defined either once, or exhaustively for a single location_group_id."
+  extraFields:
+   - name: "stop_id"
+     required: false
+     inputType: GTFS_STOP_OR_LOCATION_LIST
+     columnWidth: 12
+     helpContent: "Identifies a stop or location belonging to the location group."
+     activeComponentOverride: "locationgroupstop"
+
