--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -42,15 +42,15 @@ services:
         target: /config
     ports:
       - "4000:4000"
-  datatools-ui:
-    build:
-      context: ../
-      dockerfile: ./docker/ui/Dockerfile
-      args: *common-variables
-    restart: always
-    environment: *common-variables
-    ports:
-      - "9966:9966"
+  # datatools-ui:
+  #   build:
+  #     context: ../
+  #     dockerfile: ./docker/ui/Dockerfile
+  #     args: *common-variables
+  #   restart: always
+  #   environment: *common-variables
+  #   ports:
+  #     - "9966:9966"
   mongo:
     image: mongo
     restart: always
